# PPTX

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: basic_example.py  basic_presentation.pptx  sample_outline.json
src/: __init__.py  cli.py  pptx_creator.py
templates/: README.md
tests/: test_pptx_creator.py
